// This file defines common message types shared across all services.

syntax = "proto3";

package chatee.common;

option go_package = "chatee-go/gen/common";

// =============================================================================
// Basic Types
// =============================================================================

// Author type
enum AuthorType {
    AUTHOR_TYPE_UNSPECIFIED = 0;
    USER = 1;
    AI = 2;
}

// Content type
enum ContentType {
    CONTENT_TYPE_UNSPECIFIED = 0;
    TEXT = 1;
    IMAGE = 2;
    VIDEO = 3;
    FILE = 4;
    AUDIO = 5;
}

// =============================================================================
// Base Message
// =============================================================================

// BaseMessage is the fundamental message structure
message BaseMessage {
    string msg_id = 1;
    string author_id = 2;
    AuthorType author_type = 3;
    ContentType content_type = 4;
    bytes raw_content = 5;
    repeated string mentions = 6;
    int64 timestamp = 7;
    map<string, string> metadata = 8;
}

// ThreadMessage extends BaseMessage for thread context
message ThreadMessage {
    BaseMessage base = 1;
    string thread_id = 2;
    string parent_msg_id = 3;
    int32 depth = 4;
    bool is_root = 5;
}

// ChatMessage extends BaseMessage for chat context
message ChatMessage {
    BaseMessage base = 1;
    string chat_key = 2;
    string chat_type = 3;  // private, group
}

// =============================================================================
// Push Configuration
// =============================================================================

message PushConfig {
    int32 priority = 1;           // 1-10, higher is more urgent
    int64 expire_after = 2;       // TTL in seconds
    bool need_confirm = 3;        // Requires delivery confirmation
    bool silent = 4;              // Silent notification
}

message PushMessage {
    string type = 1;              // thread_root, thread_reply, chat_msg
    string msg_id = 2;
    string thread_id = 3;
    string chat_key = 4;
    string author_id = 5;
    bytes content = 6;
    PushConfig push_config = 7;
    repeated string recipients = 8;
}

// =============================================================================
// Pagination
// =============================================================================

message PageRequest {
    int32 page_size = 1;
    string page_token = 2;        // Cursor for next page
}

message PageResponse {
    string next_page_token = 1;
    int32 total_count = 2;
    bool has_more = 3;
}

// =============================================================================
// Error
// =============================================================================

message Error {
    int32 code = 1;
    string message = 2;
    map<string, string> details = 3;
}
