syntax = "proto3";

package chatee.svr.user;

option go_package = "chatee-go/gen/svr/user";

// =============================================================================
// User Service - User Actor Management
// =============================================================================

service UserService {
    // Connection Management
    rpc RegisterConnection(RegisterConnectionRequest) returns (RegisterConnectionResponse);
    rpc UnregisterConnection(UnregisterConnectionRequest) returns (UnregisterConnectionResponse);
    
    // User Actor Management
    rpc GetOrCreateUserActor(GetOrCreateUserActorRequest) returns (GetOrCreateUserActorResponse);
    rpc GetUserStatus(GetUserStatusRequest) returns (UserStatus);
    rpc GetActiveUsers(GetActiveUsersRequest) returns (GetActiveUsersResponse);
    
    // Message Routing
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
    
    // User Management
    rpc CreateUser(CreateUserRequest) returns (User);
    rpc GetUser(GetUserRequest) returns (User);
    rpc UpdateUser(UpdateUserRequest) returns (User);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// =============================================================================
// Connection Management
// =============================================================================

message RegisterConnectionRequest {
    string user_id = 1;
    string connection_id = 2;
}

message RegisterConnectionResponse {
    bool success = 1;
    string actor_id = 2;
}

message UnregisterConnectionRequest {
    string user_id = 1;
    string connection_id = 2;
}

message UnregisterConnectionResponse {
    bool success = 1;
}

// =============================================================================
// User Actor Management
// =============================================================================

message GetOrCreateUserActorRequest {
    string user_id = 1;
}

message GetOrCreateUserActorResponse {
    bool success = 1;
    string actor_id = 2;
    bool created = 3;  // true if actor was just created
}

message GetUserStatusRequest {
    string user_id = 1;
}

message UserStatus {
    string user_id = 1;
    bool online = 2;
    int32 connections = 3;
    int64 last_seen = 4;
    repeated string active_chats = 5;
}

message GetActiveUsersRequest {
    int32 limit = 1;
}

message GetActiveUsersResponse {
    repeated string user_ids = 1;
    int32 total = 2;
}

// =============================================================================
// Message Routing
// =============================================================================

message SendMessageRequest {
    string user_id = 1;
    bytes message = 2;
}

message SendMessageResponse {
    bool success = 1;
    int32 delivered_to_connections = 2;
}

// =============================================================================
// User Management
// =============================================================================

message CreateUserRequest {
    string email = 1;
    string name = 2;
    string avatar_url = 3;
}

message GetUserRequest {
    string user_id = 1;
}

message UpdateUserRequest {
    string user_id = 1;
    string name = 2;
    string avatar_url = 3;
    UserSettings settings = 4;
}

message DeleteUserRequest {
    string user_id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

message User {
    string id = 1;
    string email = 2;
    string name = 3;
    string avatar_url = 4;
    string status = 5;
    UserSettings settings = 6;
    int64 created_at = 7;
    int64 updated_at = 8;
}

message UserSettings {
    string theme = 1;
    string language = 2;
    bool enable_notify = 3;
    bool notify_sound = 4;
    bool compact_mode = 5;
    bool show_timestamps = 6;
    bool enter_to_send = 7;
    bool stream_responses = 8;
    string default_llm = 9;
    string default_model = 10;
}

